[package]
name = "tickengine-sdk"
version = "0.1.2"
edition = "2024"
authors = ["TickEngine Team"]
description = "High-Performance Binary Client SDK & MetaTrader 5 Bridge for TickEngine"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots", "url"] }
zeromq = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-float"] }
url = "2.5"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

[lib]
name = "tickengine_sdk"
path = "src/lib.rs"

[[bin]]
name = "tickbridge"
path = "src/main.rs"
